FIX: remove gap between toggle button and vertical collection bar at resolution <900 [t20610]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@13400 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -1112,7 +1112,7 @@ body {
         font-size: 1.3em;
     }
     .slide_btn {
-        right: 75% !important;
+        right: calc(75% - 5px) !important;
     }
     #CollectionDiv {
         position: fixed;
